src/test/ui/structs/struct-missing-comma.stderr
error: expected `,`, or `}`, found `bar`
  --> $DIR/struct-missing-comma.rs:4:13
   |
LL |     foo: u32
   |             ^ help: try adding a comma: `,`

error: aborting due to previous error

